--- a/src/components/PriceCard/PriceCard.module.scss
+++ b/src/components/PriceCard/PriceCard.module.scss
@@ -4,22 +4,36 @@
   border: 2px solid #202124;
   border-radius: 10px;
   width: 230px;
-  background-color:  $yellow-dark;
+  background-color: $yellow-dark;
   color: $white-color;
   box-shadow: 0px 0px 7px 1px rgb(0, 0, 0);
 
 
   &:hover {
     transform: scale(1.03);
-    background-color:  #25251e;
+    background-color: #25251e;
     border: 1px solid $main-yellow-color;
   }
 
-  &__btn{
+  &__btn {
     padding-block: 7px;
     border: none;
     background-color: $dark-gray-yellow;
     border-radius: 10px;
-      color: #fff;
+    color: #fff;
+  }
+
+  &__chech-icon {
+    height: 15px;
+    width: 15px;
+    background-image: url(../../images/icons/check-mark.png);
+    background-size: cover;
+  }
+
+  &__item-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
   }
 }
