changed text color

--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -26,7 +26,7 @@
   }
 
   &__title {
-    color: #fff;
+    color: #e5c053;
   }
 
   &__block {
@@ -63,6 +63,7 @@
   &__title-block {
     font-size: 20px;
     text-align: center;
+    color: #ded7bbff;
   }
 
   &__description {
