--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
 @import './components/Prices/Prices.module.scss';
 @import './components/PriceCard/PriceCard.module.scss';
 @import './components/ServicesDetails/ServicesDetails.module.scss';
+@import './components/Contacts/Contacts.module.scss';
 
 * {
   font-family: "Rubik", sans-serif;
