--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -26,7 +26,7 @@
   }
 
   &__title {
-    color: #e5c053;
+    color: $title-color;
   }
 
   &__block {
@@ -34,23 +34,26 @@
     background-color: #11120dc6;
     color: #fff;
     border: 1px solid $main-yellow-color;
-    border-radius: 15px;
-    padding: 20px 30px;
-
-    &__top {
-      min-height: 250px;
-    }
+    border-radius: 8px;
+    padding: 15px 20px;
 
     &:hover {
       opacity: 0.9;
     }
   }
 
+  &__description {
+    margin: 0;
+    margin-block: 5px;
+    font-size: 14px;
+  }
+
 
   &__icon {
-    height: 120px;
-    width: 100%;
-    background-size: contain;
+    flex-shrink: 0;
+    height: 60px;
+    width: 60px;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
@@ -61,21 +64,15 @@
 
   &__title-block {
     font-size: 20px;
-    text-align: center;
     color: #f7fbe4;
-  }
-
-  &__description {
-    font-size: 10px;
-    color: #929691;
-    text-align: center;
+    margin: 0;
   }
 
   &__info {
     display: flex;
     flex-direction: column;
     gap: 5px;
-  
+
     & p {
       padding-left: 25px;
       position: relative;
@@ -99,31 +96,39 @@
   }
 
   &__price {
-    font-size: 25px;
-    text-align: center;
-    padding: 15px 0px;
+    font-size: 18px;
+
+    & > span {
+      color: $main-yellow-color;
+    }
   }
 
   &__link {
     cursor: pointer;
     color: #fff;
     text-decoration: none;
-    margin-bottom: 15px;
     transition: color 0.2s ease;
 
     &:hover {
-     color:  $main-yellow-color;
+      color: $main-yellow-color;
     }
   }
 
   &__btn {
     transition: background-color 0.2s ease;
+    text-decoration: none;
+    text-align: center;
+    width: 50%;
     padding-block: 7px;
     border: none;
     background-color: transparent;
     border-radius: 10px;
     border: 1px solid #c8b685;
     color: #f7fbe4;
+
+    &--details {}
+
+    &--order {}
 
     &:hover {
       background-color: $main-yellow-color;
