--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -22,38 +22,6 @@
     background-image: url('../images/icons/go-up-icon.png');
   }
 
-  &--car {
-    background-image: url('../images/icons/car-icon.png');
-  }
-
-  &--one-time {
-    background-image: url('../images/icons/one-time-diagnostics-icon.png');
-  }
-
-  &--before-purchase-icon {
-    background-image: url('../images/icons/diagnostics-before-purchase-icon.png');
-  }
-
-  &--documents {
-    background-image: url('../images/icons/documents-icon.png');
-  }
-
-  &--online-consultation {
-    background-image: url('../images/icons/online-consultation-icom.png');
-  }
-
-  &--cost-assessment {
-    background-image: url('../images/icons/cost-assessment-icon.png');
-  }
-
-  &--check-mark {
-    background-image: url('../images/icons/check-mark.png');
-  }
-
-  &--prem {
-    background-size: cover;
-    background-image: url('../images/icons/prem-icon.png');
-  }
   &--insta {
     background-image: url('../images/icons/insta-icono.png');
   }
@@ -66,8 +34,17 @@
   &--telegram {
     background-image: url('../images/icons/telegram-icon.png');
   }
-  &-- {
-    background-image: url('../images/icons');
+  &--prem {
+    background-image: url('../images/icons/prem-icon.svg');
+  }
+  &--calendar {
+    background-image: url('../images/icons/calendar-icon.svg');
+  }
+  &--key {
+    background-image: url('../images/icons/key-icon.svg');
+  }
+  &--one-time-diagnostics {
+    background-image: url('../images/icons/one-time-diagnostics-icon.svg');
   }
   &-- {
     background-image: url('../images/icons');
