--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,7 @@ $yellow-light-2: #e1e5cb;
 $button-color: #535353;
 $white-color: #edecec;
 $dark-gray-yellow: #9a8343;
+$sub-title: #9a9a9a;
+$highlight-color: #b6bb9c;
+$title-color: #e5c053;
+$grey-text-color: #cfcfcf;
