--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,5 +1,5 @@
 .menu {
-  z-index: 11;
+  z-index: 111;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,13 +8,39 @@
   transition: all 0.1s;
   opacity: 0;
   pointer-events: none;
+  padding: 10px;
 
-  background-color: rgba(93, 100, 81, 0.3);
-  backdrop-filter: blur(10px);
+  background: rgba(13, 15, 0, 0.555);
+  backdrop-filter: blur(8px);
   height: 100vh;
 
   &:target {
     opacity: 1;
     pointer-events: all;
+  }
+
+  &__content {
+    background: rgba(47, 48, 42, 0.123);
+    border-radius: 20px;
+    padding: 0px 24px;
+    margin: auto;
+    box-shadow: 0 20px 40px rgba(24, 24, 23, 0.5);
+    height: 90vh;
+    width: 100%;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    animation: slideIn .25s ease-out;
+    pointer-events: all;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateY(-40px);
+  }
+  to {
+    transform: translateY(0);
   }
 }
