--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -15,15 +15,19 @@
 
   &__item {
     text-transform: uppercase;
-    transition: all 0.2s ease;
     color: #fff;
-    border: 1px solid #ffffff00;
     height: 100%;
     padding: 5px 15px;
     border-radius: 30px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
 
     &:hover {
-      border: 1px solid $main-yellow-color;
+      color: $yellow-dark;
+    }
+
+    @media (min-width: 992px) {
+      @include linkHover();
     }
   }
 }
