--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -12,3 +12,27 @@
     box-shadow: 0px 0px 4px 1px #ffffff84;
   }
 }
+
+@mixin linkHover() {
+  cursor: pointer;
+  position: relative;
+  transition: color 0.3s ease, text-decoration 0.3s ease;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 0.5px;
+    background-color: $main-yellow-color;
+    transform: scaleX(0);
+    transform-origin: bottom center;
+    transition: transform 0.3s ease;
+  }
+
+  &:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom center;
+  }
+}
