redesign topBar, menu, header

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,8 @@
   &__main {
     position: relative;
 
-    background-color: $yellow-dark;
+    background-color: $bg-section;
     padding-top: 50px;
-    box-shadow: 0px -20px 40px 15px $yellow-dark;
   }
 
   &__line {
