--- a/src/components/ChangeLanguage/ChangeLanguage.module.scss
+++ b/src/components/ChangeLanguage/ChangeLanguage.module.scss
@@ -4,11 +4,7 @@
     text-transform: uppercase;
     border-radius: 10px;
     background-color: #00000000;
-    color: #fff;
-    border: 1px solid $main-yellow-color;
-
-    &:hover {
-      background-color: #5e5d5d8b;
-    }
+    color: $top-bat-text;
+    border: none;
   }
 }
