--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,14 +1,21 @@
 .nav {
   &__link {
-    color: #fff;
+    color: #1d1d1d;
+
     height: 100%;
+    font-weight: 500;
+
+    @media (min-width: 992px) {
+      color: $top-bat-text;
+    }
   }
 
   &__list {
-    font-size: 19px;
+    font-size: 25px;
 
-    @media (max-width: 992px) {
-      font-size: 30px;
+    @media (min-width: 992px) {
+      font-size: 15px;
+
     }
 
   }
