--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,3 +10,11 @@ $sub-title: #9a9a9a;
 $highlight-color: #b6bb9c;
 $title-color: #d4b24c;
 $grey-text-color: #cfcfcf;
+
+//New colors
+$main-grey: #cdcccc;
+$dark-text-color: #1e1701;
+$top-bat-text: #3f4247;
+$yellowe-color: #eab308;
+$yellowe-hover-color: #eab208c6;
+$bg-section: #f9fafb;
