--- a/src/index.scss
+++ b/src/index.scss
@@ -46,3 +46,23 @@ body {
 body.menu-open {
   overflow: hidden;
 }
+
+.title {
+   color: $dark-text-color;
+   font-size: 30px;
+   font-weight: 700;
+   position: relative;
+   padding-bottom: 15px;
+
+  &--underline {
+     &::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: calc(50% - 60px);
+    width: 120px;
+    height: 6px;
+    background-color: $yellowe-color;
+   }
+  }
+}
