--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,15 +1,14 @@
 @mixin button($borderRad: 30px, $borderWid: 2px) {
   transition: all 0.2s ease;
   border: none;
-  border: $borderWid solid $main-yellow-color;
-  color: $main-yellow-color;
+  // border: $borderWid solid $main-yellow-color;
+  color:$dark-text-color;
   border-radius: $borderRad;
-  background-color: #ffffff10;
+  // background-color: #ffffff10;
+  background-color: $yellowe-color;
 
   &:hover {
-    background-color: $main-yellow-color;
-    color: #fff;
-    box-shadow: 0px 0px 4px 1px #ffffff84;
+    background-color: $yellowe-hover-color;
   }
 }
 
@@ -25,7 +24,7 @@
     left: 0;
     width: 100%;
     height: 0.5px;
-    background-color: $main-yellow-color;
+    background-color: $dark-text-color;
     transform: scaleX(0);
     transform-origin: bottom center;
     transition: transform 0.3s ease;
